--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -1,1 +1,52 @@
-<p>login works!</p>
+<div class="login-page">
+  <div class="login-container">
+    
+    <header>
+      <h1>Gestão Financeira</h1>
+      <h2>Acesso ao Painel</h2>
+    </header>
+
+    <form (ngSubmit)="onLogin()" #loginForm="ngForm">
+      
+      <div class="form-group">
+        <label for="username">E-mail ou Usuário</label>
+        <input 
+          type="text" 
+          id="username" 
+          name="username" 
+          placeholder="seu@email.com"
+          [(ngModel)]="username" 
+          required
+        >
+      </div>
+
+      <div class="form-group">
+        <label for="password">Senha</label>
+        <input 
+          type="password" 
+          id="password" 
+          name="password" 
+          placeholder="Digite sua senha"
+          [(ngModel)]="password" 
+          required
+        >
+      </div>
+
+      <p *ngIf="loginError" class="error-message">
+        {{ loginError }}
+      </p>
+
+      <button type="submit" [disabled]="!loginForm.valid">
+        Entrar
+      </button>
+
+    </form>
+    
+    <footer>
+      <p>Não tem uma conta? 
+        <a [routerLink]="['/register']">Crie uma aqui</a>
+      </p>
+    </footer>
+    
+  </div>
+</div>
